--- a/latex/scrbook_template/bibliographyoptions.tex
+++ b/latex/scrbook_template/bibliographyoptions.tex
@@ -9,7 +9,7 @@
     bibencoding=utf8,
     % set alphabetical order of references for english languages
     sortlocale=en_US,
-    style=apa,
+    style=phys,
     maxbibnames=3,
     minbibnames=1,
 ]{biblatex}
@@ -24,3 +24,6 @@
 
 \RequirePackage[pdfpagelabels=true,hidelinks]{hyperref}
 % insert \printbibliography whereever you want the references to appear in your pdf
+
+% % usage: \eqcite{421}{13.23}{Demtroeder1}; output: [2, p. 421, Eq. (13.23)]
+\newcommand*{\eqcite}[3]{\cite[p.~#1, Eq.~(#2)]{#3}}
