--- a/latex/settings.sty
+++ b/latex/settings.sty
@@ -235,7 +235,7 @@
 \newcommand*{\bvec}[1]{\boldsymbol{#1}}
 
 % curl, divergence, gradient
-\DeclareMathOperator*{\curl}{curl}
+\DeclareMathOperator*{\curl}{\mathbf{curl}}
 \DeclareMathOperator*{\diver}{div}
 \DeclareMathOperator*{\grad}{\mathbf{grad}}
 
